--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
     "gatsby": "^5.5.0",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-react-helmet": "^6.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
@@ -20,8 +21,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "reading-time": "^2.0.0-1",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "reading-time": "^2.0.0-1"
   },
   "devDependencies": {
     "contentful-import": "^8.3.2",
