rregullime te vogla

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
     "serve": "gatsby serve",
-    "postinstall": "node ./bin/hello.js",
+    "postinstall": "node ./bin/hello.js & node ./postinstall.js",
     "setup": "node ./bin/setup.js",
     "netlify:login": "netlify login",
     "netlify:deploy": "netlify deploy -d public -p",
