--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.47.0",
